# nearx

./: .gitignore  .prettierrc.yaml  Cargo.toml  Makefile  README.md  build.rs  build.sh  package.json  rust-toolchain.toml  tsconfig.json
cli/: package.json  tsconfig.json
cli/src/: command.ts  index.ts
client/: index.ts  nearx-pool-client.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
client/src/: contract.ts  create_proposal.ts  index.ts  nearx-pool-client.ts  upgrade.ts  utils.ts
contracts/integration-tests/: Cargo.toml
contracts/integration-tests/src/: constants.rs  context.rs  helpers.rs  legacy_types.rs  lib.rs
contracts/mock-stake-pool/: Cargo.toml
contracts/mock-stake-pool/src/: lib.rs
contracts/near-x/: Cargo.toml
contracts/near-x/src/: constants.rs  contract.rs  errors.rs  events.rs  fungible_token.rs  lib.rs  state.rs  utils.rs
contracts/near-x/src/contract/: callbacks.rs  contract_migration.rs  empty_storage_spec.rs  internal.rs  metadata.rs  operator.rs  public.rs  storage_management.rs  storage_spec.rs  upgrade.rs  user_migration.rs  util.rs
contracts/near-x/src/fungible_token/: metadata.rs  nearx_internal.rs  nearx_token.rs  receiver_test.rs
contracts/near-x/tests/: unit_tests.rs
contracts/near-x/tests/helpers/: mod.rs
integration_tests/: Cargo.toml
integration_tests/src/: helpers.rs  main.rs  types.rs
live_wasms/: near_x.wasm
res/: mock_stake_pool.wasm  near_x.wasm  near_x_251482fec5a82589e310a09fc0251c91fb7e95fd.wasm  near_x_d0880d47fc3410398ecf984308d7c86a9b5a7513.wasm
scripts/: add_validators_testnet.sh  contracts.env  deploy.sh  dev-deploy.sh  dev-testing.sh  ft_transfer.sh  lockup.sh  mainnet_validator.sh  owner_update.sh  ref_finance.sh  run_epoch.sh  state_view.sh  testnet-deploy.sh  user_actions.sh  validator_draining.sh  validators_operations.sh
scripts/env/: mainnet.env  testnet.env
src/: account.rs  constants.rs  contract.rs  errors.rs  fungible_token.rs  gas.rs  internal.rs  lib.rs  nearx_token.rs  operator.rs  staking_pool.rs  state.rs  types.rs  utils.rs  validator.rs
src/contract/: internal.rs  operator.rs  public.rs
src/fungible_token/: nearx_token.rs
tests/: integration_tests.rs  mod.rs  unit_tests.rs
