[package]
edition = "2018"
name = "near-liquid-token"
version = "0.1.0"
authors = ["bchain <bchain@staderlabs.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.0"
uint = { version = "0.8.3", default-features = false }

[dev-dependencies]
near-sdk-sim = "3.2.0"
