[package]
edition = "2018"
name = "near-liquid-token"
version = "0.1.0"
authors = ["bchain <bchain@staderlabs.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=4.0.0-pre.9"
near-contract-standards = "=4.0.0-pre.9"
uint = { version = "0.8.3", default-features = false }
#syn = { version = "=1.0.78"}

[dev-dependencies]
near-sdk-sim = "=4.0.0-pre.9"
anyhow = "1.0"
near-units = "0.1.0"
# arbitrary_precision enabled for u128 types that workspaces requires for Balance types
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio = { version = "1.10.0", features = ["full"] }
workspaces = { git = "https://github.com/near/workspaces-rs" }
