[package]
edition = "2018"
name = "near-x"
version = "0.1.0"
authors = ["bchain <bchain@staderlabs.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=4.0.0"
near-contract-standards = "=4.0.0"
uint = { version = "0.8.3", default-features = false }

[dev-dependencies]
anyhow = "1.0"
near-units = "0.1.0"
# arbitrary_precision enabled for u128 types that workspaces requires for Balance types
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio = { version = "1.10.0", features = ["full"] }
workspaces = { git = "https://github.com/near/workspaces-rs" }
